# landmasses

./: CMakeLists.txt  README.md  design.md
resources/: map1_6islands.txt  map2_6islands.txt  map3_5islands.txt  map4_3islands.txt  map5_4islands.txt  map6_0islands.txt
src/: clustering.hpp  common.hpp  constants.hpp  image.hpp  io.hpp  main.cpp  simplified_implementation.cpp
test/: sample.hpp  test_clustering.cpp  test_image.cpp
